--- a/controllers/robocup_striker/Makefile
+++ b/controllers/robocup_striker/Makefile
@@ -30,13 +30,13 @@ clean:
 else
 
 ifndef WEBOTS_NAOSIM_PATH
-WEBOTS_NAOSIM_PATH = $(WEBOTS_HOME_PATH)/projects/robots/aldebaran/aldebaran/simulator-sdk
+WEBOTS_NAOSIM_PATH = ../../aldebaran/simulator-sdk
 endif
 
-SOCCER_RESOURCES_PATH = $(WEBOTS_HOME)/projects/samples/contests/robotstadium
-NS_LIB_PATH = $(SOCCER_RESOURCES_PATH)/libraries/nao_soccer
-SV_LIB_PATH = $(SOCCER_RESOURCES_PATH)/libraries/soccer_vision
-INCLUDE = -I"$(NS_LIB_PATH)" -I"$(SV_LIB_PATH)" -I"$(SOCCER_RESOURCES_PATH)/controllers/nao_soccer_supervisor" -I"$(WEBOTS_NAOSIM_PATH)/include"
+SOCCER_RESOURCES_PATH = ../..
+NS_LIB_PATH = ../../libraries/nao_soccer
+SV_LIB_PATH = ../../libraries/soccer_vision
+INCLUDE = -I"$(NS_LIB_PATH)" -I"$(SV_LIB_PATH)" -I"../nao_soccer_supervisor" -I"$(WEBOTS_NAOSIM_PATH)/include"
 LIBRARIES = -L"$(NS_LIB_PATH)" -lnao_soccer -L"$(WEBOTS_NAOSIM_PATH)/lib" -Wl,-rpath,"$(WEBOTS_NAOSIM_PATH)/lib" -L"$(SV_LIB_PATH)" -lsoccer_vision
 CFLAGS = -std=c++0x
 
