--- a/libraries/soccer_vision/soccer_vision_VS.vcxproj
+++ b/libraries/soccer_vision/soccer_vision_VS.vcxproj
@@ -33,7 +33,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\..\..\..\..\..\include; ..\..\..\..\..\..\msys64\mingw64\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(WEBOTS_HOME)\include; $(WEBOTS_HOME)\msys64\mingw64\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/D_CRT_SECURE_NO_WARNINGS </AdditionalOptions>
     </ClCompile>
     <Link>
