--- a/controllers/nao_team_0/nao_team_0.vcxproj
+++ b/controllers/nao_team_0/nao_team_0.vcxproj
@@ -32,7 +32,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\..\..\..\contests\robotstadium\libraries\nao_soccer;..\..\..\..\..\robots\aldebaran\aldebaran\simulator-sdk\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\libraries\nao_soccer;..\..\aldebaran\simulator-sdk\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/D_CRT_SECURE_NO_WARNINGS </AdditionalOptions>
     </ClCompile>
     <Link>
@@ -41,7 +41,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\..\..\contests\robotstadium\libraries\nao_soccer;..\..\..\..\contests\robotstadium\libraries\soccer_vision;..\..\..\..\..\robots\aldebaran\aldebaran\simulator-sdk\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\libraries\nao_soccer;..\..\libraries\soccer_vision;..\..\aldebaran\simulator-sdk\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>nao_soccer.lib;
 soccer_vision_VS.lib;
 alcommon.lib;alerror.lib;alproxies.lib;alvalue.lib;opencv_core243.lib;
