--- a/libraries/nao_soccer/nao_soccer.vcxproj
+++ b/libraries/nao_soccer/nao_soccer.vcxproj
@@ -32,7 +32,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\soccer_vision;..\..\controllers\nao_soccer_supervisor;..\..\..\..\..\robots\aldebaran\aldebaran\simulator-sdk\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\soccer_vision;..\..\controllers\nao_soccer_supervisor;..\..\aldebaran\simulator-sdk\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/D_CRT_SECURE_NO_WARNINGS -D NOMINMAX</AdditionalOptions>
     </ClCompile>
     <Link>
