Hopefully fixed compilation on Ubuntu 16.04 (blindly)

--- a/controllers/challenge_solver/Makefile
+++ b/controllers/challenge_solver/Makefile
@@ -34,13 +34,10 @@ RESOURCES_PATH = ../../aldebaran/simulator-sdk
 INCLUDE = -I"$(RESOURCES_PATH)/include"
 LIBRARIES = -L"$(RESOURCES_PATH)/lib" -Wl,-rpath,"$(RESOURCES_PATH)/lib" -lalcommon -lalerror -lalproxies -lalvalue -lboost_system -lopencv_core -lopencv_imgproc -lqi -lqitype
 USE_C_API = true
+CFLAGS = -Wno-deprecated-declarations -DBOOST_SIGNALS_NO_DEPRECATION_WARNING -Wno-unused-local-typedefs -D_GLIBCXX_USE_CXX11_ABI=0
 
 # We need to use this until Aldebaran changes how they compile their libraries on Mac
 USE_STD_CXX = true
-
-# Hide Boost warnings from Aldebaran libraries
-CFLAGS += -DBOOST_SIGNALS_NO_DEPRECATION_WARNING
-CFLAGS += -Wno-unused-local-typedefs
 
 ### Do not modify: this includes Webots global Makefile.include
 include $(WEBOTS_HOME_PATH)/resources/Makefile.include
