--- a/aldebaran/Makefile
+++ b/aldebaran/Makefile
@@ -1,5 +1,4 @@
-space :=
-space +=
+space := $(subst ,, )
 WEBOTS_HOME_PATH=$(subst $(space),\ ,$(strip $(subst \,/,$(WEBOTS_HOME))))
 include $(WEBOTS_HOME_PATH)/resources/Makefile.os.include
 
